[gd_scene load_steps=4 format=3 uid="uid://bycbvvxvjb035"]

[ext_resource type="Script" uid="uid://4v35scf22mit" path="res://Scripts/title_screen_gui.gd" id="1_cttc7"]
[ext_resource type="Texture2D" uid="uid://badx14u7wc3hk" path="res://Assets/Sprites/Owen Art/TitleScreen_PlaceHolder.png" id="2_oxdhk"]
[ext_resource type="Script" uid="uid://dwv73oy32b0vq" path="res://Scripts/play_game.gd" id="3_rvddj"]

[node name="TitleScreenGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cttc7")

[node name="TitlePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TitlePlaceholder" type="Sprite2D" parent="TitlePanel"]
position = Vector2(640, 360)
scale = Vector2(0.6666666, 0.66666675)
texture = ExtResource("2_oxdhk")

[node name="PlayGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.287
anchor_top = 0.606
anchor_right = 0.70000005
anchor_bottom = 0.68500006
offset_left = -0.35998535
offset_top = -0.32000732
offset_right = -6.1035156e-05
offset_bottom = -0.19970703
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"
script = ExtResource("3_rvddj")

[node name="QuitGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.287
anchor_top = 0.70000005
anchor_right = 0.70000005
anchor_bottom = 0.77800006
offset_left = 0.64001465
offset_top = -3.0517578e-05
offset_right = -6.1035156e-05
offset_bottom = -0.16003418
text = "QUIT"

[connection signal="button_down" from="PlayGame" to="." method="_on_play_game_button_down"]
[connection signal="button_down" from="QuitGame" to="." method="_on_quit_game_button_down"]
